updates based on the code review