@@ -50,8 +50,8 @@ public class SchedulingUIConfig extends UIConfig {
 
     @Override
     public List<ConfigField> createFields() {
-        final ConfigField digestHour = SelectConfigField.createRequired(KEY_DAILY_DIGEST_HOUR_OF_DAY, "Daily digest hour of day", Arrays.asList("1", "2", "3", "4", "5", "6", "7", "8", "10", "11", "12"), this::validateDigestHourOfDay);
-        final ConfigField purgeFrequency = SelectConfigField.createRequired(KEY_PURGE_DATA_FREQUENCY_DAYS, "Purge data frequency in days", Arrays.asList("1", "2", "3"), this::validatePurgeFrequency);
+        final ConfigField digestHour = SelectConfigField.createRequired(KEY_DAILY_DIGEST_HOUR_OF_DAY, "Daily digest hour of day", List.of("1", "2", "3", "4", "5", "6", "7", "8", "10", "11", "12"), this::validateDigestHourOfDay);
+        final ConfigField purgeFrequency = SelectConfigField.createRequired(KEY_PURGE_DATA_FREQUENCY_DAYS, "Purge data frequency in days", List.of("1", "2", "3"), this::validatePurgeFrequency);
         return Arrays.asList(digestHour, purgeFrequency);
     }
 
